--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Pretteter1/GIS-So-Se-2020/issues"
   },
-  "homepage": "https://github.com/Pretteter1/GIS-So-Se-2020#readme"
+  "homepage": "https://github.com/Pretteter1/GIS-So-Se-2020#readme",
+  "dependencies": {
+    "@types/node": "^14.0.13"
+  }
 }
